--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "rich",
         "presence",
         "rich presence",
-        "rpc"
+        "rpc",
+        "windsurf"
     ],
     "categories": [
         "Visualization",
