--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
                         "type": "string",
                         "enum": [
                             "Code",
+                            "Windsurf",
                             "Visual Studio Code",
                             "VSCodium",
                             "Custom"
